# Task-Management-Master-Project

./: .env  .env.example  .gitignore  pyproject.toml  task_management.db  test_database.db
app/: config.py  main.py
app/api/: dependencies.py
app/api/v1/: task.py  tasks.py
app/core/: exceptions.py  handlers.py  logging.py
app/db/entities/: __init__.py  task.py
app/db/repositories/: task.py
app/models/: common.py  task.py
infrastructure/dapr/: secrets.json
infrastructure/dapr/components/: pubsub.yaml  secrets.yaml.disabled
services/notification-service/: pyproject.toml
services/notification-service/app/: config.py  consumer.py  handlers.py  main.py  monitor.py
services/task-api/app/: main.py
services/task-api/app/core/: correlation.py  dapr_client.py  dapr_pubsub.py  events.py  logging.py  middleware.py  resilience.py
services/task-api/app/servicess/: user_client.py
