[project]
name = "task-managment-api"
version = "0.1.0"
description = "Bu Proje api yazmayi ve kod yazmayi ogrenmek amaciyla gelistirilen To/Do api projesidir."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic-settings>=2.12.0",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[tool.ruff]
# Kontrol Kurallari
# E : pycodestyle errors
# F : pyflakes
# I : isort (import duzenleme)
# UP : pyupgrade (eski Python sozdizimini yeniler)
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E","F","I","UP"]

[tool.mypy]
# Kullanilacak Python Surumu

python_version = "3.12"

#Kati kurallar icin

strict : true
